Fix font size on mobile

--- a/src/PointsPerGame.UI.Blazor/Pages/TableDetails.razor.css
+++ b/src/PointsPerGame.UI.Blazor/Pages/TableDetails.razor.css
@@ -83,7 +83,6 @@ h1 {
 
     .teamTable th:not(:nth-child(2)),
     .teamTable td:not(:nth-child(2)) {
-        font-size: 0.7rem;
         padding-inline: 0.05rem;
     }
 
